# BILT-Workshop-Demo-Function

./: README.md  main.py  pyproject.toml  rules.py
.github/workflows/: main.yml
Utilities/: helpers.py  spreadsheet.py
Workshop/Exercise_1/: automate_function.py
Workshop/Exercise_2/: automate_function.py
Workshop/Exercise_3/: automate_function.py
Workshop/Exercise_4/: automate_function.py
tests/: test_exercise_1.py  test_exercise_2.py  test_exercise_3.py  test_exercise_4.py  tests.py
